2018-01-04  Carl Hetherington  <cth@carlh.net>

	* Apply filters to preview immediateley (#1019).

	* Set up a default KDM write mode and preselect the last used
	one when re-opening the KDM window (#1137).

2018-01-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.35 released.

2018-01-02  Carl Hetherington  <cth@carlh.net>

	* Add rewind-to-zero button to player.

	* Go back to zero when loading a new DCP into the player (#1152).

	* Fix generated ISDCF name with full-frame content (#1118).

	* Fix downloading of certificates on Windows (#1124).

	* Version 2.11.34 released.

2017-12-31  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.33 released.

2017-12-31  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.32 released.

2017-12-31  Carl Hetherington  <cth@carlh.net>

	* Allow CLI KDM generator to make KDMs from DKDMs (#1132).

2017-12-30  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.31 released.

2017-12-19  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.30 released.

2017-12-17  Carl Hetherington  <cth@carlh.net>

	* Add Close option to player.

	* Display decode resolution in the player.

2017-12-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.29 released.

2017-12-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.28 released.

2017-11-08  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Updated fr_FR translation from Thierry Journet.

2017-10-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.27 released.

2017-10-13  Carl Hetherington  <cth@carlh.net>

	* Colour axis labels in the audio plot (#835).

2017-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.26 released.

2017-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.25 released.

2017-10-09  Carl Hetherington  <cth@carlh.net>

	* Updated cs_CZ translation from Tomáš Begeni.

2017-10-05  Carl Hetherington  <cth@carlh.net>

	* Add config option to control writer's
	maximum_frames_in_memory.
