@@ -1,5 +1,8 @@
 2018-01-04  Carl Hetherington  <cth@carlh.net>
 
+	* Put up a token (unspecific) progress bar during import
+	of image folders (#987).
+
 	* Apply filters to preview immediateley (#1019).
 
 	* Set up a default KDM write mode and preselect the last used
